Fixing article body image alignment.

--- a/src/styles/site.css
+++ b/src/styles/site.css
@@ -12,3 +12,7 @@
     font-weight: 600;
     font-size: 1.5rem;
 }
+
+.article-content > .alignleft {
+    float: left;
+}
